--- a/test.ipynb
+++ b/test.ipynb
@@ -2,14 +2,34 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import torch\n",
+    "import json\n",
     "\n",
-    "x = t"
+    "with open('log.json', 'a') as f:\n",
+    "    json.dump({'task': 'tacre', 'shot': 10}, f)\n",
+    "    f.write('\\n')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('log.json', 'a') as f:\n",
+    "    json.dump({'task': 'tacre', 'shot': 10}, f)\n",
+    "    f.write('\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -19,7 +39,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.9.12"
   }
  },
